# TPRM-Frameworks-mcp

./: .env.example  .gitignore  AGENT_1_COMPLETE.md  AGENT_2_HANDOFF.md  ARCHITECTURE_REVIEW.md  BEFORE_AFTER_COMPARISON.md  CAIQ_V4_PARSING_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_CHECKLIST.md  CONFIGURATION_GUIDE.md  CONFIGURATION_SUMMARY.md  DATA_STRUCTURE_FIX_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DISCLAIMER.md  DORA_COMPLIANCE_GUIDE.md  DORA_EXAMPLE_QUESTIONS.md  DORA_NIS2_FIXES_SUMMARY.md  Dockerfile  ERROR_HANDLING_QUICKREF.md  ERROR_HANDLING_SUMMARY.md  EVIDENCE_TOOL_HANDLERS.py  EXECUTIVE_SUMMARY.md  INTEGRATION.md  LICENSE  LOGGING_IMPLEMENTATION_SUMMARY.md  LOGGING_QUICK_REFERENCE.md  Makefile  PHASE_1_COMPLETE.md  PHASE_1_PERSISTENCE.md  PHASE_1_QUICKSTART.md  PHASE_1_SUMMARY.md  PHASE_2_AGENT3_SUMMARY.md  PHASE_2_AND_BEYOND_PLAN.md  PHASE_2_TESTING_REPORT.md  PRIVACY.md  PRODUCTION_READINESS_ASSESSMENT.md  README.md  REGULATORY_MAPPINGS_FIX_COMPLETE.md  (+16 more)
.github/workflows/: codeql.yml  deploy-azure.yml  ghcr-build.yml  gitleaks.yml  integration-tests.yml  mcpb-bundle.yml  pip-audit.yml  (+3 more)
examples/: caiq_v4_workflow.py  caiq_vendor_assessment.md  cloud_provider_assessment.py  example_logs.json
fixtures/: golden-hashes.json  golden-tests.json
scripts/: README.md  backup_db.py  enhance_caiq_rubrics.py  generate_golden_hashes.py  inspect_db.py  migrate_db.py  parse_caiq_v4.py  validate_regulatory_fields.py
tests/: QUICK_START.md  README.md  TEST_ARCHITECTURE.md  __init__.py  conftest.py  integration_test.py  test_caiq_v4_full.py  test_dora_integration.py  test_eu_regulations_integration.py  test_evidence_storage.py  test_golden.py  test_health_check.py  test_input_validation.py  test_new_features.py  test_nis2_integration.py  test_phase2_integration.py  test_server.py  test_storage.py
(+46 files in other folders)
