[project]
name = "tprm-frameworks-mcp"
version = "1.0.0"
description = "MCP server for TPRM workflows - questionnaire generation, vendor assessment, and compliance mapping"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Ansvar Systems", email = "hello@ansvar.eu"}
]
keywords = ["mcp", "tprm", "vendor-risk", "sig", "caiq", "dora", "nis2", "third-party-risk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=0.9.0",
    "python-json-logger>=2.0.7",
    "psutil>=5.9.0",
    "starlette>=0.37.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
tprm-mcp = "tprm_frameworks_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/Ansvar-Systems/tprm-frameworks-mcp"
Repository = "https://github.com/Ansvar-Systems/tprm-frameworks-mcp"
Issues = "https://github.com/Ansvar-Systems/tprm-frameworks-mcp/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tprm_frameworks_mcp = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
